--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark my-own">
     <a class="navbar-brand" href="/">
     <%= image_tag "logo.png", width: '30', height: '30', class: 'd-inline-block align-top', alt: 'logo' %>
-    Movie Searcher</a>
+    MOVIE SEARCHBOX</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
